--- a/styles/servicos.css
+++ b/styles/servicos.css
@@ -175,23 +175,23 @@ button:target {
 
 @media (max-width: 800px) {
     .search-box-container {
-        height: 200px;
+        height: 150px;
     }
 
     .search-box {
-        font-size: 40px;
+        font-size: 30px;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         gap: 16px;
         width: 80%;
-        height: 70px;
+        height: 50px;
         border: 2px solid var(--color05);
         padding: 2px 16px;
     }
 
-    .search-box input {
-        font-size: 18px;
+    .search-box select {
+        font-size: 16px;
     }
 
     .job-card {
